<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:minHeight="@dimen/profile_author_layout_height"
    android:layout_gravity="center_vertical"
    android:background="@color/leshareThemeColor"
    android:paddingTop="@dimen/profile_author_layout_padding_top"
    android:paddingBottom="@dimen/profile_author_layout_padding_top">
    <!--android:background="@color/colorPrimary"-->
<ImageView
    android:id="@+id/profile_author_back_id"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:src="@drawable/ic_back"
    android:layout_marginStart="@dimen/profile_author_back_margen_start"/>
    <TextView
        android:id="@+id/profile_author_name_id"
        style="@style/ProfilePageFontTheme"
        android:layout_centerHorizontal="true"
        android:paddingBottom="@dimen/profile_author_layout_padding_top"
        android:textSize="25sp"
        android:text="@string/profile_author_name_default"/>
    <TextView
        android:id="@+id/attention_author_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_marginRight="@dimen/profile_author_back_margen_start"
        android:text="@string/profile_attention_author_string"
        android:textColor="@android:color/white"
        android:background="@drawable/attention_button_background"/>
    <RelativeLayout
        android:id="@+id/profile_author_icon_layout_id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/profile_author_name_id"
        >
        <TextView
            android:layout_centerInParent="true"
            android:layout_toStartOf="@+id/profile_author_icon_id"
            android:paddingRight="@dimen/profile_author_icon_padding_left_right"
            android:text="@string/profile_author_location_default"
            style="@style/ProfilePageFontTheme"
            />
        <de.hdodenhof.circleimageview.CircleImageView
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:id="@+id/profile_author_icon_id"
            android:layout_width="@dimen/profile_author_icon_background_size"
            android:layout_height="@dimen/profile_author_icon_background_size"
            android:layout_centerInParent="true"
            android:src="@drawable/ic_tab_profile_normal"
            app:civ_border_width="2dp"
            app:civ_border_color="#ffffff"/>
        <TextView
            android:paddingLeft="@dimen/profile_author_icon_padding_left_right"
            android:layout_centerInParent="true"
            android:layout_toEndOf="@id/profile_author_icon_id"
            android:text="@string/profile_author_gender_male"
            style="@style/ProfilePageFontTheme"
            />
    </RelativeLayout>
    <TextView
        android:id="@+id/profile_author_signature_id"
        android:layout_centerHorizontal="true"
        android:paddingTop="@dimen/profile_author_layout_padding_top"
        android:layout_below="@id/profile_author_icon_layout_id"
        android:text="@string/profile_author_signature_default"
        android:singleLine="true"
        android:ellipsize="end"
        style="@style/ProfilePageFontTheme"
        />

    <RelativeLayout
        android:id="@+id/profile_author_liveness_layout_id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/profile_author_layout_padding_top"
        android:layout_marginBottom="5dp"
        android:layout_below="@id/profile_author_signature_id"
        android:gravity="center_horizontal"
        >
        <TextView
            android:id="@+id/profile_author_liveness_love_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/ic_love"
            style="@style/ProfilePageFontTheme"
            android:text="@string/author_default_textview_num"/>
        <TextView
            android:id="@+id/profile_author_liveness_collect_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/ic_collect"
            android:layout_toEndOf="@id/profile_author_liveness_love_id"
            style="@style/ProfilePageFontTheme"
            android:text="@string/author_default_textview_num"/>

    </RelativeLayout>
<!--    <Button
        android:id="@+id/attention"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/profile_author_liveness_layout_id"
        android:background="@drawable/attention_button_background"
        android:text="+guanzhu"/>-->
</RelativeLayout>
